# smartfin-ble-client

./: .clang-format  .clangd  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  requirements.txt
.github/workflows/: tests.yml
docs/: SWIFT_INTEGRATION.md  wire_format.md
src/bridge/: smartfin_c_api.cpp  smartfin_c_api.h
src/pipeline/: buffer_sink.hpp  file_sink.cpp  file_sink.hpp  logging_sink.hpp  sample_sink.hpp
src/proccessing/: config.hpp  orient_ride.cpp  proc_types.cpp  proc_types.hpp  processor.cpp  processor.hpp
src/proccessing/AHRS/: ahrs_types.hpp  madgwick_ahrs.cpp  madgwick_ahrs.hpp
src/proccessing/filter/: butterworth.cpp  butterworth.hpp  decimator.cpp  decimator.hpp  filtfilt.cpp  filtfilt.hpp
src/proccessing/math/: constants.hpp  lin_alg.cpp  lin_alg.hpp  matrix.hpp  matrix.tpp
src/proccessing/sort/: timsort.hpp
src/proccessing/welch/: fft.cpp  welch.cpp  welch.hpp
src/protocol/: ensemble_decoder.cpp  ensemble_decoder.hpp  ensemble_types.hpp
src/receiver/: ble_config.hpp  receiver.cpp
src/session/: session.cpp  session.hpp
src/transport/: ble_adapter.hpp  simpleble_adapter.cpp  simpleble_adapter.hpp
tests/: CMakeLists.txt  filtfilt_gust_test.cpp  gen_filtfilt_vectors.py
tests/butterworth/: CMakeLists.txt  butterworth_test.cpp
tests/filtfilt/: CMakeLists.txt  filtfilt_gust_test.cpp  filtfilt_properties_test.cpp  gen_filtfilt_vectors.py
tests/welch/: CMakeLists.txt  fft_test.cpp
tools/: ble_logger.cpp  ride_recorder.cpp
tools/demo/: demo_api.cpp  demo_api.h  fetch_missions.py  run_demo.py
